@@ -1,1 +1,9 @@
 # JavaFXTemplate
+A simple JavaFX repository that should ease the understanding of how JavaFX works.
+
+# TODO
+1. Add JavaFX Library (File -> Project Structure -> Libraries -> Hit"+")
+2. Add VM Options (Run -> Edit Configurations -> Modify Options -> Add VM Options)
+3. Paste this: `--module-path "PATH_TO_THE_LIB_FOLDER" --add-modules javafx.controls,javafx.fxml`
+4. Hit Apply
+5. Add fxml files under the resources folder and create some controllers for each fxml file.
